añadido los modals
modals: contacto, login, registro

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -105,6 +105,13 @@ footer a:hover{
     color: #428bca;
 }
 
+#modal-contacto i{
+    color:white;
+}
+
+.rmn-facebook{
+    background-color: #3b5998;
+}
 
 
 
