--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,7 @@
+#start{
+    height: 100vh;
+}
+
 /*    Estilos para el header   */
 
 .nav-logo{
@@ -113,7 +117,17 @@ footer a:hover{
     background-color: #3b5998;
 }
 
+#reserva{
+    margin-top: 30px;
+}
 
+#qr-code{
+    width:20%;
+}
+
+#map-container{
+    height: 300px    
+}
 
 
 
