--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,19 @@
     height: 100vh;
 }
 
+/*    Estilos para index.html   */
+
+#start video{
+    position:  absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0.7
+    
+
+}
+
 /*    Estilos para el header   */
 
 .nav-logo{
